Added footer on:     aboutUs.html     contactUs.html     gallery.html     menu.html     reviews.html

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,9 +30,13 @@
         <img src="img/breaking.jpg" height="200" width="300" alt="" class="about-img">
     </section>
     <footer class="footer">
-
-
-
+        <p> Follow us on: </p>
+        <div class="icons">
+        <img src="icons/icons8-facebook.svg" alt="Facebook">
+        <img src="icons/icons8-twitter.svg" alt="Twitter">
+        <img src="icons/icons8-instagram.svg" alt="Instagram">
+        <img src="icons/icons8-youtube.svg" alt="Youtube">
+        </div>
     </footer>
 </body>
 </html>
