--- a/contactUs.html
+++ b/contactUs.html
@@ -41,10 +41,13 @@
         </contact>
     </section>
     <footer class="footer">
-
-
-
+        <p> Follow us on: </p>
+        <div class="icons">
+        <img src="icons/icons8-facebook.svg" alt="Facebook">
+        <img src="icons/icons8-twitter.svg" alt="Twitter">
+        <img src="icons/icons8-instagram.svg" alt="Instagram">
+        <img src="icons/icons8-youtube.svg" alt="Youtube">
+        </div>
     </footer>
-
 </body>
 </html>
