--- a/reviews.html
+++ b/reviews.html
@@ -30,13 +30,15 @@
             <p class="grid-comment grid-paragraph4">Markus: <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem labore eaque praesentium veniam molestiae mollitia atque similique, ea laudantium saepe eveniet fugit voluptas animi aut hic dolores veritatis dicta illo.</p>
 
         </div>
-
     </section>
-
     <footer class="footer">
-
-
-
+        <p> Follow us on: </p>
+        <div class="icons">
+        <img src="icons/icons8-facebook.svg" alt="Facebook">
+        <img src="icons/icons8-twitter.svg" alt="Twitter">
+        <img src="icons/icons8-instagram.svg" alt="Instagram">
+        <img src="icons/icons8-youtube.svg" alt="Youtube">
+        </div>
     </footer>
 </body>
 </html>
