--- a/gallery.html
+++ b/gallery.html
@@ -74,11 +74,14 @@
             </div>
         </div>
     </section>
-
     <footer class="footer">
-
-
-
+        <p> Follow us on: </p>
+        <div class="icons">
+        <img src="icons/icons8-facebook.svg" alt="Facebook">
+        <img src="icons/icons8-twitter.svg" alt="Twitter">
+        <img src="icons/icons8-instagram.svg" alt="Instagram">
+        <img src="icons/icons8-youtube.svg" alt="Youtube">
+        </div>
     </footer>
     
 </body>
