--- a/menu.html
+++ b/menu.html
@@ -27,9 +27,13 @@
         <img src="img/menu.jpg" height="500" width="400" alt="menu" class="menu-img">
     </section>
     <footer class="footer">
-
-
-
+        <p> Follow us on: </p>
+        <div class="icons">
+        <img src="icons/icons8-facebook.svg" alt="Facebook">
+        <img src="icons/icons8-twitter.svg" alt="Twitter">
+        <img src="icons/icons8-instagram.svg" alt="Instagram">
+        <img src="icons/icons8-youtube.svg" alt="Youtube">
+        </div>
     </footer>
 </body>
 </html>
